fix: cutoff long description text and make it scrollable

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -9,7 +9,18 @@ body {
   }
 }
 
+::-webkit-scrollbar {
+  @apply w-2.5 h-2.5;
 
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-transparent
+}
+
+::-webkit-scrollbar-thumb {
+  @apply rounded-full bg-border border-[1px] border-transparent border-solid bg-clip-padding;
+}
 
 @layer base {
   :root {
